<resources>
    <string name="app_name">HR MileStone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="textview_signin">Sign In</string>
    <string name="textview_signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="btn_signup">Sign Up</string>
    <string name="nav_dashboard">News Feed</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_events">Events</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_msg">Messages</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>


    <string name="firstname">First Name</string>

    <!--Toast Messages-->
    <string name="toast_no_internet">No Internet connection available</string>
    <string name="toast_no_name">User name is required</string>
    <string name="toast_no_firstname">First name is required</string>
    <string name="toast_no_valid_firstname">Please enter valid first name</string>
    <string name="toast_no_lastname">Last name is required</string>
    <string name="toast_no_valid_lastname">Please enter valid last name</string>
    <string name="toast_first_name_length_not_valid">Firstname/Lastname must be in length of min 2 and max 20 characters</string>
    <string name="toast_no_email">Email is required</string>
    <string name="toast_no_contact">Contact is required</string>
    <string name="toast_no_password">Password is required</string>
    <string name="toast_no_valid_password">Password is not valid</string>
    <string name="toast_no_confirm_password">Confirm password is required</string>
    <string name="toast_no_valid_confirm_password">Confirm password is not valid</string>
    <string name="toast_no_new_password">New password is required</string>
    <string name="toast_contact_wrong">Contact is invalid</string>
    <string name="toast_email_format_wrong">Email is invalid</string>
    <string name="toast_password_mismatch">Password is not matched</string>
    <string name="toast_password_same">Old password and New Password should not be same</string>
    <string name="toast_password_length_invalid">Password must be in length of min 8 and max 15 characters</string>
    <string name="toast_new_password_length_invalid">Password must be in length of min 8 and max 15 characters</string>
    <string name="toast_confirm_password_length_invalid">Confirm password must be in length of min 8 and max 15 characters</string>
    <string name="toast_no_valid_new_password">New password is not valid</string>


    =====================permission==============
    <string name="permission_never_asked">Permission Never Asked</string>
    <string name="go_to_setting">Go To Setting</string>
    <string name="cancel">Cancel</string>
    <string name="rdb_male">Male</string>
    <string name="rdb_female">Female</string>
    <string name="tv_gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="dashboard_add">Post</string>

    <string name="single_permission_text">(Click on FAB to check Single permission.\nTo test again, change the app permission in settings or reinstall the app)</string>


    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="passworderror">Password must be 6 characters long</string>
    <string name="cnfpassworderror">Must be same as above password</string>
    <string name="numbererror">Enter valid number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_events">Events</string>
    <string name="title_photos">Photos</string>
    <string name="title_profile">Profile</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="contact">Contact</string>
    <string name="user_profile_company">Company</string>
    <string name="select_company_name">Select Company Name</string>
    <string name="experience">Experience</string>
    <string name="remove_current_photo">Remove Current Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="event_name">Event Name</string>
    <string name="date_of_event">Date of Event</string>
    <string name="event_venue">Event Venue</string>
    <string name="time_of_event">Time of Event</string>
    <string name="event_description">Event Description</string>
    <string name="event_agenda">Event Agenda</string>
    <string name="add_event">Add Event</string>

    <string name="title_activity_modify_event">ModifyEvent</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="modify_event">Modify Event</string>
    <string name="auth_failed">auth Failed</string>
    <string name="AboutUs">The Human Resources profession has changed dramatically in the past century.
        Functions of HR have gone way beyond recruiting, monitoring and paper pushing.
        In today’s dynamic workplace, human resource professionals are expected to add value to their organizations.
        In addition to managing traditional human resource functions,
        Human Resources is expected to contribute to such key organizational challenges as facilitating mergers and acquisitions,
        improving productivity and quality, improving the ability of an organization to bring new products to market,
        and to continuously improve the company’s return on its greatest asset – its people.
        \n\nHR ¬Milepost Forum is a group of HR professionals from Ahmedabad, who through their HR Milepost forum,
        intend to bring together people related to HR on one platform.
        HR Milepost summits deal with themes and issues that are affecting the present industry and aims at arriving to solutions
        through discussions and networking.</string>
    <string name="number_size_error">Number must be greater than 10 digits.</string>
    <string name="delete_event">Delete Event</string>
    <string name="event_delete_alert">Are you sure, you want to delete this event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_photo">Add Photo!</string>
    <string name="delete_photo">Delete Photo</string>


</resources>
