<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_photos" />

        <item
            android:id="@+id/nav_msg"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_msg" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/icon_about_us"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>

   <!-- <item android:title="">
        <menu>

        </menu>
    </item>

    <item android:title="">
        <menu>

        </menu>
    </item>
-->
</menu>
