<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_modify_event_banner"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:src="@drawable/event_pic" />

        <EditText
            android:id="@+id/et_event_modify_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/event_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_event_modify_agenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_agenda"
            android:inputType="textPersonName"
            android:maxLines="3" />

        <EditText
            android:id="@+id/et_event_modify_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_description"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_event_modify_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/date_of_event"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_event_modify_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/time_of_event"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_event_modify_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:hint="@string/event_venue"
            android:maxLines="5"
            android:singleLine="true" />


        <Button
            android:id="@+id/btn_modify_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/modify_event"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_delete_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/btn_logut_bg"
            android:text="@string/delete_event"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
