<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ECF0F1"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp">


    <Button
        android:id="@+id/btn_remove_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/remove_current_photo"
        android:textAllCaps="false"
        android:textColor="#E74C3C"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#777" />

    <Button
        android:id="@+id/btn_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:textColor="#3498DB"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#777" />

    <Button
        android:id="@+id/btn_choose_from_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/choose_from_library"
        android:textAllCaps="false"
        android:textColor="#3498DB"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#777" />

    <Button
        android:id="@+id/btn_cancel_profile_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#3498DB"
        android:textSize="15sp" />

</LinearLayout>