<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    tools:ignore="ScrollViewCount">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        app:layout_optimizationLevel="all"
        tools:context="com.hrmilestoneapp.SignUpScreen">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/textview_signup"
            android:textSize="@dimen/textview_sign_in"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="6dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInput_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColorHint="@color/hint_color"
                app:hintAnimationEnabled="true"
                tools:ignore="HardcodedText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInput_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColorHint="@color/hint_color"
                app:hintAnimationEnabled="true"
                tools:ignore="HardcodedText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInput_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textColorHint="@color/hint_color"
                app:hintAnimationEnabled="true"
                tools:ignore="HardcodedText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEdit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInput_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColorHint="@color/hint_color"
                app:hintAnimationEnabled="true"
                tools:ignore="HardcodedText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEdit_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInput_cnf_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="@color/hint_color"
                app:hintAnimationEnabled="true"
                tools:ignore="HardcodedText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEdit_cnf_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInput_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:textColorHint="@color/hint_color"
                app:hintAnimationEnabled="true"
                tools:ignore="HardcodedText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEdit_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/select_company_name"
                android:textColor="@color/hint_color"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <Spinner
                android:id="@+id/txtInput_cmpyName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#5DADE2"
                android:entries="@array/company_name"
                android:isScrollContainer="true"
                android:prompt="@string/select_company_name"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/tcExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/experience"
                android:textColor="@color/hint_color"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <Spinner
                android:id="@+id/txtInput_exp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#5DADE2"
                android:entries="@array/experience"
                android:isScrollContainer="true"
                android:prompt="@string/experience"
                android:spinnerMode="dialog">

            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tv_gender"
                    android:textColor="@color/hint_color"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/rdgrp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:checked="true"
                        android:text="@string/rdb_male" />

                    <RadioButton
                        android:id="@+id/rdb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:text="@string/rdb_female" />

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/birthdate"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:gravity="center_horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_main"
                    android:text="@string/btn_signup"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
